--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,12 @@
 <!--            <version>5.2.1</version>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-java8time</artifactId>
+            <version>3.0.4.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
