--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,11 +54,17 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1
-      POSTGRES_DB: postgresql
+      POSTGRES_DB: postgres
     expose:
       - 5432
     ports:
-      - "5432:5432"
+      - "5433:5432"
+    volumes:
+      - postgres:/var/lib/postgresql/data
+      - ./src/main/resources/db/1_create_tables_DB.sql:/docker-entrypoint-initdb.d/1_create_tables_DB.sql
+      - ./src/main/resources/db/2_populate_common_tables_DB.sql:/docker-entrypoint-initdb.d/2_populate_common_tables_DB.sql
+      - ./src/main/resources/db/3_populate_tracks_DB.sql:/docker-entrypoint-initdb.d/3_populate_tracks_DB.sql
+      - ./src/main/resources/db/4_populate_coordinates_DB.sql:/docker-entrypoint-initdb.d/4_populate_coordinates_DB.sql
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
@@ -78,3 +84,6 @@ services:
     depends_on:
       - "db-app"
       - "kafka"
+
+volumes:
+  postgres:
