--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,6 @@ spring:
 logging:
   level:
     org.hibernate.orm.jdbc.bind: trace
-    org.thymeleaf: trace
 
 server:
   port: 8080
@@ -37,8 +36,9 @@ topic:
     name: t.track.generate
 ---
 spring:
-  profiles:
-    active: "local"
+  config:
+    activate:
+      on-profile: "local"
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
   kafka:
@@ -50,8 +50,9 @@ spring:
             ms: 1000
 ---
 spring:
-  profiles:
-    active: "docker"
+  config:
+    activate:
+      on-profile: "docker"
   datasource:
     url: jdbc:postgresql://db-app:5432/postgres
   kafka:
